--- a/index.html
+++ b/index.html
@@ -3,129 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Calculator</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #121212;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-        }
-        .calculator {
-            width: 320px;
-            background: #1e1e1e;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        #display {
-            width: 100%;
-            height: 50px;
-            background: #333;
-            color: white;
-            text-align: right;
-            font-size: 1.5em;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            width: 100%;
-        }
-        .btn {
-            height: 60px;
-            background: #444;
-            border: none;
-            color: white;
-            font-size: 1.2em;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .btn:hover {
-            background: cyan;
-            color: black;
-        }
-        .equal {
-            grid-column: span 2;
-            background: #ff9800;
-        }
-        .equal:hover {
-            background: #ffcc80;
-        }
-        .zero {
-            grid-column: span 2;
-        }
-        .clear {
-            background: #ff3b3b;
-        }
-        .clear:hover {
-            background: #ff6b6b;
-        }
-        .delete {
-            background: #8a2be2;
-        }
-        .delete:hover {
-            background: #a55eea;
-        }
-    </style>
+    <title>Public Tools Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="calculator">
-        <input type="text" id="display" disabled>
-        <div class="buttons">
-            <button class="btn clear" onclick="clearDisplay()">C</button>
-            <button class="btn delete" onclick="deleteLast()">DEL</button>
-            <button class="btn" onclick="appendValue('.')">.</button>
-            <button class="btn" onclick="appendValue('/')">/</button>
-            <button class="btn" onclick="appendValue('7')">7</button>
-            <button class="btn" onclick="appendValue('8')">8</button>
-            <button class="btn" onclick="appendValue('9')">9</button>
-            <button class="btn" onclick="appendValue('*')">*</button>
-            <button class="btn" onclick="appendValue('4')">4</button>
-            <button class="btn" onclick="appendValue('5')">5</button>
-            <button class="btn" onclick="appendValue('6')">6</button>
-            <button class="btn" onclick="appendValue('-')">-</button>
-            <button class="btn" onclick="appendValue('1')">1</button>
-            <button class="btn" onclick="appendValue('2')">2</button>
-            <button class="btn" onclick="appendValue('3')">3</button>
-            <button class="btn" onclick="appendValue('+')">+</button>
-            <button class="btn zero" onclick="appendValue('0')">0</button>
-            <button class="btn equal" onclick="calculate()">=</button>
+    <div class="dashboard">
+        <h1 class="title">Tools Dashboard</h1>
+        <div class="tools-container">
+            <div class="tool-card" onclick="navigateTo('calculator')">
+                <h2>Calculator</h2>
+                <p>Perform basic calculations</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('converter')">
+                <h2>Currency Converter</h2>
+                <p>Convert currencies easily</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('notes')">
+                <h2>Text Editor</h2>
+                <p>Write and edit notes</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('todo')">
+                <h2>Color Palette Generator</h2>
+                <p>Generate beautiful color palettes</p>
+            </div>
         </div>
     </div>
-    <script>
-        function appendValue(value) {
-            document.getElementById("display").value += value;
-        }
-        function clearDisplay() {
-            document.getElementById("display").value = "";
-        }
-        function deleteLast() {
-            let display = document.getElementById("display");
-            display.value = display.value.slice(0, -1);
-        }
-        function calculate() {
-            try {
-                document.getElementById("display").value = eval(document.getElementById("display").value);
-            } catch {
-                document.getElementById("display").value = "Error";
-            }
-        }
-    </script>
 </body>
 </html>
