--- a/index.html
+++ b/index.html
@@ -15,17 +15,41 @@
                 <h2>Calculator</h2>
                 <p>Perform basic calculations</p>
             </div>
-            <div class="tool-card" onclick="navigateTo('converter')">
+            <div class="tool-card" onclick="navigateTo('currency-converter')">
                 <h2>Currency Converter</h2>
                 <p>Convert currencies easily</p>
             </div>
-            <div class="tool-card" onclick="navigateTo('notes')">
+            <div class="tool-card" onclick="navigateTo('text-editor')">
                 <h2>Text Editor</h2>
                 <p>Write and edit notes</p>
             </div>
-            <div class="tool-card" onclick="navigateTo('todo')">
+            <div class="tool-card" onclick="navigateTo('color-palette-generator')">
                 <h2>Color Palette Generator</h2>
                 <p>Generate beautiful color palettes</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('base64')">
+                <h2>Base64 Encoder/Decoder</h2>
+                <p>Encode and decode Base64 data</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('ip-lookup')">
+                <h2>IP Lookup</h2>
+                <p>Find your public IP and location</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('json-formatter')">
+                <h2>JSON Formatter</h2>
+                <p>Format and validate JSON data</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('stopwatch-timer')">
+                <h2>Stopwatch & Timer</h2>
+                <p>Track time with precision</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('text-case')">
+                <h2>Text Case Converter</h2>
+                <p>Change text case easily</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('url-encoder')">
+                <h2>URL Encoder/Decoder</h2>
+                <p>Encode and decode URLs</p>
             </div>
         </div>
     </div>
