--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>Color Palette Generator</h2>
                 <p>Generate beautiful color palettes</p>
             </div>
-            <div class="tool-card" onclick="navigateTo('base64')">
+            <div class="tool-card" onclick="navigateTo('base64-encoder-decoder')">
                 <h2>Base64 Encoder/Decoder</h2>
                 <p>Encode and decode Base64 data</p>
             </div>
@@ -43,13 +43,17 @@
                 <h2>Stopwatch & Timer</h2>
                 <p>Track time with precision</p>
             </div>
-            <div class="tool-card" onclick="navigateTo('text-case')">
+            <div class="tool-card" onclick="navigateTo('text-case-converter')">
                 <h2>Text Case Converter</h2>
                 <p>Change text case easily</p>
             </div>
-            <div class="tool-card" onclick="navigateTo('url-encoder')">
+            <div class="tool-card" onclick="navigateTo('url-encoder-decoder')">
                 <h2>URL Encoder/Decoder</h2>
                 <p>Encode and decode URLs</p>
+            </div>
+            <div class="tool-card" onclick="navigateTo('time-zone-converter')">
+                <h2>Time Zone Converter</h2>
+                <p>Convert time zones accurately</p>
             </div>
         </div>
     </div>
