--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 <h2>Color Palette Generator</h2>
                 <p>Generate beautiful color palettes</p>
             </div>
+            <div class="tool-card" onclick="navigateTo('lorem-ipsum')">
+                <h2>Lorem Ipsum Generator</h2>
+                <p>Generate dummy text for testing</p>
+            </div>
         </div>
 
         <!-- Networking & IP Tools -->
