Added DNS Lookup Tool

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                 <h2>IP Tools Suite</h2>
                 <p>Extract, validate, and analyze IPs</p>
             </div>
+            <div class="tool-card" onclick="navigateTo('dns-lookup')">
+                <h2>DNS Lookup</h2>
+                <p>Resolve DNS records for domains</p>
+            </div>
         </div>
 
     </div>
